# governed-mcp-gateway

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: AUDIT-REDACTION.md  BRD.md  COST-SAVINGS.md  INDUSTRY-APPLICABILITY.md  NFR.md  RETAIL-MERCHANDISING-MCP.md  SOP.md  SYSTEM-DESIGN.md
docs/adr/: 0001-mcp-as-integration-contract.md  0002-human-in-the-loop-for-writes.md  0003-hash-chained-audit-log.md  0004-audit-argument-redaction.md
java-mcp-server/: Dockerfile  pom.xml
java-mcp-server/src/main/java/io/reference/mcp/: JavaMcpServerApplication.java
java-mcp-server/src/main/java/io/reference/mcp/audit/: AuditArgumentRedactor.java  AuditLog.java
java-mcp-server/src/main/java/io/reference/mcp/governance/: PolicyEngine.java  Sensitivity.java
java-mcp-server/src/main/java/io/reference/mcp/redaction/: PayloadRedactor.java  RedactionPolicy.java  RedactionRuleSet.java
java-mcp-server/src/main/java/io/reference/mcp/retail/: RetailCatalog.java
java-mcp-server/src/main/java/io/reference/mcp/server/: McpController.java  McpService.java
java-mcp-server/src/main/resources/: application.yml
java-mcp-server/src/test/java/io/reference/mcp/: McpServiceTest.java
python-mcp-server/: Dockerfile  pyproject.toml
python-mcp-server/src/agent_mcp/: __init__.py  audit.py  client.py  governance.py  merchandising_demo.py  protocol.py  redaction.py  retail_catalog.py  server.py  tools.py
python-mcp-server/tests/: test_audit_redaction.py  test_retail_tools.py  test_server_and_client.py
(+3 files in other folders)
